Projects: Correction on covers still

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -312,7 +312,6 @@ h3 {
     max-width: 870px;
 
     img {
-      width: 100%;
       height: auto;
       max-width: 60vw;
       max-height: 80vh;
